<resources>
    <string name="app_name">DTLA_Application</string>
    <string name="Menu">DTLA</string>
    <string name="tutorial">TUTORIEL</string>
    <string name="credits">CRÉDITS</string>
    <string name="start">DÉMARRER</string>
    <string name="language">LANGUE</string>
    <string name="exit">QUITTER</string>
    <string name="language_name">Choix de la langue</string>
    <string name="language_french">FRANÇAIS</string>
    <string name="language_spanish">ESPAGNOL</string>
    <string name="language_english">ANGLAIS</string>
    <string name="language_chinese">CHINOIS</string>
    <string name="replay_title">Répétition de l\'enregistrement</string>
    <string name="next_title">Test suivant</string>
    <string name="replay_msg">ÊTES-VOUS SÛR DE VOULOIR REPRODUIRE L\'ENREGISTREMENT? \nVous pourrez le faire une seule fois, et prenez en compte que cela pourrait fausser les résultats</string>
    <string name="replay_yes">OUI</string>
    <string name="next_msg">ÊTES-VOUS SÛR DE VOULOIR PASSER AU TEST SUIVANT ?</string>
    <string name="replay_no">NON</string>
    <string name="help_config_text">Volume : Si la puissance audio n\'est pas suffisante au volume maximal, il est possible de brancher une source externe (casque, enceinte). \n</string>
    <string name="help_test1_text1">L\'examinateur demande au sujet de produire oralement le nom de chaque image qu\'il fait apparaître en cliquant sur chacune d\'elle, en partant de la gauche vers la droite, en commençant par la série du haut. Aucune aide ni facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/] si le mot produit est correct ou sur [img src=refuse/] s\'il est erroné.\n\n</string>
    <string name="help_test1_text2">1 point est alloué pour la dénomination correcte de chacune des 6 images.\n</string>
    <string name="help_test2_text1">L\'examinateur demande au sujet de répéter 3 mots, 3 non-mots et 3 phrases, présentés dans cet ordre. Il appuie sur [img src=play_blue/] pour faire entendre un à un chaque stimulus. Aucune aide, répétition du mot/non-mot/phrase, ni facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/] si la répétition est correcte ou sur [img src=refuse/] si elle est erronée.\n\n</string>
    <string name="help_test2_text2">1 point est alloué pour la répétition correcte de chaque mot, non-mot et phrase.\n</string>
    <string name="help_test3_text1">L\'examinateur demande au sujet de produire le plus de mots possible débutant par la lettre D. Après la présentation de la consigne, il débute le test en cliquant sur le bouton "Lancer le chronomètre". Aucune aide, incitation ou facilitation n\'est fournie. Au fur et à mesure de la tâche, l\'examinateur appuie sur le compteur, [img src=plus/]  pour enregistrer les réponses produites par la personne évaluée. En cas d\'erreur, l\'examinateur peut corriger le comptage en appuyant sur [img src=minus/] (correction de la cotation).\n\n</string>
    <string name="help_test3_text2">1 point est alloué pour chaque bonne réponse.\n</string>
    <string name="help_test4_text1">L\'examinateur demande au sujet de répéter en ordre alphabétique une liste de 3 mots. Il débute en fournissant un ou deux exemples (voir consigne). Il appuie sur l\'icône [img src=play_blue/] pour faire entendre le 1er exemple et au besoin le second exemple. Enfin, il appuie à nouveau sur [img src=play_blue/] placé à droite de l\'item du test pour le faire entendre. L\'administrateur cote la réponse en appuyant sur [img src=validate/] si la répétition des 3 mots est correcte ou sur [img src=refuse/] si elle est erronée. Après la présentation de la consigne, aucune aide, incitation ou facilitation n\'est fournie.\n\n</string>
    <string name="help_test4_text2">1 point est alloué pour la répétition correcte de la série de 3 mots.\n</string>
    <string name="help_test5_text1">L\'examinateur demande au sujet de lire à voix haute 3 mots et 3 non-mots qu\'il fait apparaître en cliquant sur chacun d\'eux, en partant de la gauche vers la droite, en commençant par la série du haut. Aucune aide ni facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/] si le mot produit est correct ou sur l\'icône [img src=refuse/] s\'il est erroné.\n\n</string>
    <string name="help_test5_text2">1 point est alloué pour la lecture correcte de chacun des mots et des non-mots.\n </string>
    <string name="help_test6_text1">L\'examinateur fait apparaître sur l\'écran de la tablette au sujet une image d\'action et fait entendre une phrase en appuyant sur le premier icône [img src=play_blue/]. Il demande au sujet de répondre par "oui" ou par "non" si la phrase correspond ou non à l\'image. Après la présentation de la consigne, aucune aide, incitation ou facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/]si le mot produit est correct ou sur [img src=refuse/] s\'il est erroné.\n\n</string>
    <string name="help_test6_text2">1 point est alloué pour chaque phrase.\n </string>
    <string name="help_test7_text1">L\'examinateur demande au sujet d\'écrire sous dictée 3 mots et 3 non-mots. Il appuie sur l\'icône [img src=play_blue/] pour faire entendre un à un chaque stimulus. Aucune aide, répétition du mot/non-mot, ni facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/] si la production écrite est correcte ou sur [img src=refuse/] si elle est erronée.\n\n</string>
    <string name="help_test7_text2">1 point est alloué pour l\'écriture correcte de chacun des mots et des non-mots. Pour les non-mots, sont jugées correctes toutes les productions qui respectent les règles de transcodage graphème-phonème (ex., audre : AUDRE; ODRE).\n   </string>
    <string name="help_test8_text1">L\'examinateur demande au sujet d\'écrire une phrase complète comprenant un sujet, un verbe et un complément. Après la présentation de la consigne, aucune aide, incitation ou facilitation n\'est fournie.\n\n</string>
    <string name="help_test8_text2">1 point est alloué pour l\'écriture d\'une phrase complète, sans tenir compte des fautes d\'orthographe.\n </string>
    <string name="help_test9_text1">L\'examinateur demande au sujet d\'associer des mots écrits sur la base de leur sens. Il fait apparaître chaque triplet de mots écrits en cliquant sur chacun d\'eux, en partant du haut vers le bas, en commençant par la série du haut. Aucune aide ni facilitation n\'est fournie. En cas d\'erreur ou de non-réponse, l\'item suivant est présenté. Pour chaque item, l\'administrateur cote la réponse en appuyant sur [img src=validate/] si le choix est correct ou sur l\'icône [img src=refuse/] s\'il est erroné.\n\n</string>
    <string name="help_test9_text2">1 point est alloué pour chacune des 4 associations sémantiques.\n </string>
    <string name="help_test10_text1">En se basant sur l\'interview dirigée et les échanges conversationnels avec le sujet, l\'examinateur évalue la présence ou l\'absence de troubles de la syntaxe (agrammatisme, phrase mal formée), de l\'accès lexical (anomie) et de l\'articulation.\n\n</string>
    <string name="help_test10_text2">1 point est alloué pour l\'absence de troubles de la syntaxe, de l\'accès lexical et de l\'articulation.</string>
    <string name="help_results_text">Pour récuperer le fichier PDF deux solutions sont possibles.\n\t-Brancher la tablette à un ordinateur et l\'ouvrir dans le dossier téléchargement\\DTLA (ou download\\DTLA).\n\t-Utiliser un gestionnaire de fichiers (une application Android) pour le consulter directement depuis la tablette.\nPour la deuxième solution, voici une liste des gestionnaires de fichiers les plus populaires\n\t-Astro\n\t-ES File Explorer\n\t-Cabinet Beta\n\t-Solid Explorer\n\t-File explorer...</string>
    <string name="help_admin">Administration : </string>
    <string name="help_quote">Cotation : </string>
    <string name="help_config_title">Aide pour la configuration</string>
    <string name="help_test1_title">Aide pour la tâche 1</string>
    <string name="help_test2_title">Aide pour la tâche 2</string>
    <string name="help_test3_title">Aide pour la tâche 3</string>
    <string name="help_test4_title">Aide pour la tâche 4</string>
    <string name="help_test5_title">Aide pour la tâche 5</string>
    <string name="help_test6_title">Aide pour la tâche 6</string>
    <string name="help_test7_title">Aide pour la tâche 7</string>
    <string name="help_test8_title">Aide pour la tâche 8</string>
    <string name="help_test9_title">Aide pour la tâche 9</string>
    <string name="help_test10_title">Aide pour la tâche 10</string>
    <string name="help_results_title">Aide pour la récupération du PDF</string>
    <string name="config_instruction">Vérifier que le patient voit correctement l\'image et qu\'il entend correctement le son de la tablette.</string>
    <string name="language_instruction">Langues supplémentaires en cours de développement.</string>
    <string name="tuto_instruction">Touchez un numéro sur la gauche pour selectionner un exercice.</string>
    <string name="test9_text1">lunettes</string>
    <string name="test9_text1_part1">oreille</string>
    <string name="test9_text1_part2">oeil</string>
    <string name="num_version">\nVersion : 2.0\n</string>
    <string name="credit_general_title">\nCrédits application\n</string>
    <string name="credit_general">\nCette application a été développée par Thomas Bernard, un étudiant de 2ème année à l\'École Nationale Supérieure de Cognitique de Bordeaux (France).
        Elle a été développée pendant 3 mois lors d\'un projet informatique libre sur une tablette Nexus 7 prêtée par l\'ENSC.\n</string>
    <string name="credit_greetings">\nUn grand merci à Antoine Nourry et Oneka Jauregi Miquelarena pour leur investissement et leur participation au développement de l\'application\n</string>
    <string name="credit_ihm_title">\nCrédits IHM\n</string>
    <string name="credit_team_title">\nCrédits équipe de recherche\n</string>
    <string name="credit_ihm_team">\nÉquipe d\'IHM :\n\nAntoine Nourry\n\nDominic Savard\n\nEmmanuel Recolin\n\nOneka Jauregi Miquelarena\n\nThomas Bernard\n\nTimothée Picard\n\n</string>
    <string name="credit_ihm">\nL\'interface de cette application a été développée au cours d\'un projet de session automne 2015 à L\'Université Laval.
        Il fait suite au cours GLO-4000 Interface Personne-Machine présenté par Mr Nadir Belkhiter.\n
    </string>
    <string name="credit_research_text">\nLes deux projets précédents ont été portés par Joël Macoir pour informatiser l\'actuel test papier de dépistage des troubles du language (DTLA).\n
        \nCe test à été réalisé par l\'équipe suivante :</string>
    <string name="credit_research_team">\nJoël Macoir, professeur à l\’Université Laval (Canada)\n
        \nMarion Fossard, professeur à l\'Université de Neuchâtel (Suisse)\n
        \nLaurent lefebvre, professeur à l\'Université de Mons (Belgique)\
        \nLaura Monetta, professeur à l\'Université Laval (Canada)\n
        \nMaximiliano Wilson, professeur à l\'Université Laval (Canada)\n
        \nAntoine Renard, Amiens (France)\n
        \nThi Mai Tran, professeur à l\'Université de Lille (France)\n</string>
    <string name="copyrights">"\nCopyright © 2016, Joël Macoir\n"</string>
</resources>