<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    style="@style/blueBackground" >
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_horizontal|top"
            android:weightSum="1" >

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center_horizontal"
                android:layout_weight="0.98"
                android:id="@+id/frameLayout31" >

                <ScrollView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:id="@+id/scrollView"
                    android:layout_gravity="center_horizontal"
                    android:scrollbars="vertical"
                    android:fillViewport="true">

                    <LinearLayout
                        android:orientation="vertical"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/credtis_layout">
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="#ffffff"
                                android:text="@string/credit_general_title"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/credit_general"/>
                            <ImageView
                                android:layout_width="400dp"
                                android:layout_height="280dp"
                                android:scaleType="fitXY"
                                android:src="@drawable/ensc_logo"
                                android:layout_marginBottom="15dp"
                                android:layout_gravity="center"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:background="#ffffff"
                            android:text="@string/num_version"/>
                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/credit_greetings"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="#ffffff"
                                android:text="@string/credit_ihm_title"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/credit_ihm"/>
                            <ImageView
                                android:layout_width="400dp"
                                android:layout_height="200dp"
                                android:scaleType="fitXY"
                                android:background="#ffffff"
                                android:src="@drawable/ulaval_fsg"
                                android:layout_marginBottom="15dp"
                                android:layout_gravity="center"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/credit_ihm_team"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center_horizontal"
                                android:gravity="center"
                                android:background="#ffffff"
                                android:text="@string/credit_team_title"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/credit_research_text"/>
                            <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/credit_research_team"/>
                         <TextView
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:background="#ffffff"
                                android:text="@string/copyrights"/>
                    </LinearLayout>

                </ScrollView>

            </FrameLayout>
            <!-- Bouton précédent -->
        </LinearLayout>
        <ImageButton
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:layout_marginRight="15dp"
            android:layout_marginBottom="15dp"
            android:id="@+id/credits_back"
            android:background="@drawable/back_arrow"
            android:layout_alignParentRight="true"
            android:layout_alignParentBottom="true"/>
    </RelativeLayout>
</LinearLayout>
