<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/whiteBackground"
    android:weightSum="1">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_weight="0.21">
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="1156dp"
        android:layout_height="match_parent"
        android:layout_weight="0.34">
        <FrameLayout
            android:layout_width="480dp"
            android:layout_height="match_parent"></FrameLayout>
            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="0.21">
        <TextView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:scaleType="fitXY"
            android:id="@+id/test9_text1_full"
            android:layout_gravity="center_vertical"
            android:text="@string/test9_text1"
            android:foregroundGravity="center"
            android:textSize="25dp"/>
                </LinearLayout>
            </LinearLayout>
                <LinearLayout
                    android:orientation="horizontal"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_weight="0.21">
                    <FrameLayout
                        android:layout_width="300dp"
                        android:layout_height="match_parent"></FrameLayout>
                    <TextView
                        android:layout_width="200dp"
                        android:layout_height="200dp"
                        android:scaleType="fitXY"
                        android:id="@+id/test9_text2_full"
                        android:layout_gravity="center_vertical"
                        android:text="@string/test9_text1_part1"
                        android:foregroundGravity="center"
                        android:textSize="25dp"/>
                    <FrameLayout
                        android:layout_width="150dp"
                        android:layout_height="match_parent"></FrameLayout>
                        <TextView
                            android:layout_width="200dp"
                            android:layout_height="200dp"
                            android:scaleType="fitXY"
                            android:id="@+id/test9_text3_full"
                            android:layout_gravity="center_vertical"
                            android:text="@string/test9_text1_part2"
                            android:foregroundGravity="center"
                            android:textSize="25dp"/>
                    </LinearLayout>
        </LinearLayout>
    <ImageButton
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:scaleType="fitXY"
        android:id="@+id/test9_text_back"
        android:src="@drawable/back_arrow"
        android:layout_gravity="bottom|right"
        android:layout_marginRight="5dp"
        android:layout_marginBottom="5dp"
        android:background="@null"/>

</LinearLayout>