<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal" android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/blueBackground">

    <LinearLayout
        style="@style/blueBackground"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="1" >
        <!-- Avancement lateral -->
        <!-- Fin avancement lateral -->
        <!-- Corps central -->
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:layout_weight="0.1" >
            <!-- Titre et consignes -->
            <!-- Fin titre et consignes -->
            <!-- Corps du test -->
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0.3" >
                <!--CONTENU DU TEST-->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">
                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/scrollView2"
                        android:layout_gravity="center_horizontal"
                        android:scrollbars="vertical"
                        android:fillViewport="true">
                        <LinearLayout
                            android:orientation="vertical"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:id="@+id/tuto_layout"
                            android:weightSum="1">
                            <!-- Contenu effectif du test -->

                            <LinearLayout
                                android:orientation="horizontal"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent">
                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:layout_weight="0.50"
                                    android:weightSum="1">
                                    <Button
                                        android:layout_width="238dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/language_french"
                                        android:id="@+id/button"
                                        android:layout_gravity="center"
                                        android:layout_weight="0.32"
                                        style="@style/button_type1"/>

                                    <Button
                                        android:layout_width="238dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/language_spanish"
                                        android:id="@+id/button3"
                                        android:textColor="@color/grey"
                                        android:layout_gravity="center"
                                        android:layout_weight="0.32"
                                        android:clickable="false"
                                        style="@style/button_type1"/>

                                </LinearLayout>

                                <LinearLayout
                                    android:orientation="vertical"
                                    android:layout_width="wrap_content"
                                    android:layout_height="match_parent"
                                    android:gravity="center"
                                    android:layout_weight="0.50"
                                    android:weightSum="1">
                                    <Button
                                        android:layout_width="238dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/language_english"
                                        android:id="@+id/button5"
                                        android:layout_gravity="center"
                                        android:textColor="@color/grey"
                                        android:layout_weight="0.32"
                                        android:clickable="false"
                                        style="@style/button_type1"/>

                                    <Button
                                        android:layout_width="238dp"
                                        android:layout_height="wrap_content"
                                        android:text="@string/language_chinese"
                                        android:id="@+id/button6"
                                        android:layout_gravity="center"
                                        android:textColor="@color/grey"
                                        android:layout_weight="0.32"
                                        android:clickable="false"
                                        style="@style/button_type1"/>

                                </LinearLayout>
                            </LinearLayout>

                            <!-- Fin contenu effectif du test -->

                        </LinearLayout>
                    </ScrollView>
                    <ImageButton
                        android:layout_width="90dp"
                        android:layout_height="90dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginBottom="15dp"
                        android:id="@+id/language_back"
                        android:background="@drawable/back_arrow"
                        android:layout_alignParentRight="true"
                        android:layout_alignParentBottom="true"/>
                </RelativeLayout>
                <!-- Fin contenu du test -->
            </LinearLayout>
            <!-- Fin corps du test -->
        </LinearLayout>
        <FrameLayout
            android:layout_width="15dp"
            android:layout_height="match_parent"/>
        <!-- Fin corps central -->
    </LinearLayout>
</LinearLayout>